mvn-findbugs-annotations: Autospec creation for version 1.3.9.1

--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = mvn-findbugs-annotations
 url = https://github.com/stephenc/findbugs-annotations/archive/findbugs-annotations-1.3.9-1.tar.gz
-archives = https://repo1.maven.org/maven2/com/github/stephenc/findbugs/findbugs-annotations/1.3.9-1/findbugs-annotations-1.3.9-1.jar : https://repo1.maven.org/maven2/com/github/stephenc/findbugs/findbugs-annotations/1.3.9-1/findbugs-annotations-1.3.9-1.pom :
+archives = https://repo1.maven.org/maven2/com/github/stephenc/findbugs/findbugs-annotations/1.3.9-1/findbugs-annotations-1.3.9-1.jar : https://repo1.maven.org/maven2/com/github/stephenc/findbugs/findbugs-annotations/1.3.9-1/findbugs-annotations-1.3.9-1.pom : https://repo1.maven.org/maven2/com/google/code/findbugs/annotations/2.0.3/annotations-2.0.3.jar : https://repo1.maven.org/maven2/com/google/code/findbugs/annotations/2.0.3/annotations-2.0.3.pom :
 giturl = https://github.com/stephenc/findbugs-annotations.git
 
 [autospec]
